<resources>
    <string name="app_name">TipCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="billTotal">Bill total:</string>
    <string name="zeroDecimal">0.00</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="tipText">Tip:</string>
    <string name="totalText">Total:</string>
    <string name="customText">Custom:</string>
    <string name="eighteenPercent">18%</string>
</resources>
